# Particle-Simulation

./: .gitignore  .gitmodules  Build-Run.sh  Build.bat  Build.sh  CMakeLists.txt  Clean.bat  Clean.sh  Generate.bat  Generate.sh  README.md  TODO.md  Test.sh  config  imgui.ini  naive-profiler-output-1000000.csv  premake5.lua  profiler-output-aftermesh.csv
Documentation/GL/: Helpers.md
Documentation/Utility/: Errors.md
Documentation/Window/: Window.md
Experiments/: BufferOutput.cpp
Experiments/ParticleSystem/: PTRenderer.cpp  PTRenderer.h  Particle.h  RandomTexture.hpp  RenderProgram.cpp  RenderProgram.h  Texture.cpp  Texture.h  UpdateProgram.cpp  UpdateProgram.h  render.fragment  update.geometry
Experiments/Particle_v001/Resources/Shaders/: basic.fragment  basic.vertex
Experiments/Particle_v001/src/: main.cpp
Experiments/Particle_v001/src/Core/: App.cpp  App.h
Experiments/Particle_v001/src/GL/: GLRenderer.cpp  GLRenderer.h  GLSLProgram.cpp  GLSLProgram.h  GL_Helpers.hpp  OpenGL.h
Experiments/Particle_v001/src/Renderables/: Quad.hpp  Triangle.hpp  Vertex.hpp
Experiments/Particle_v001/src/Utility/: Error.hpp
Experiments/Particle_v002: Cubes/Resources/Shaders/: basic.fragment  basic.vertex  point.fragment  point.vertex  pointSprite.fragment
Experiments/Particle_v002: Cubes/src/Core/: App.h
Experiments/Particle_v002: Cubes/src/OpenGL/: GLLog.h  Renderer.h  VertexArray.cpp
Experiments/Particle_v002: Cubes/src/Utility/: Exception.h
Experiments/Particle_v002_Cubes/src/OpenGL/: OpenGL.h  Program.h  Renderer.cpp  Texture.cpp  VertexArray.h
Experiments/Particle_v002_Cubes/src/Primitives/: Cube.h  Quad.h  Vertex.h
Experiments/Particle_v002_Cubes/src/Utility/: Log.cpp
Experiments/Particle_v003: Sphere/Core/Input/: InputManager.h
Experiments/Particle_v003: Sphere/Core/Window/: Window.cpp
Experiments/Particle_v003: Sphere/OpenGL/: Renderer.h  UpdateProgram.cpp  VertexBuffer.cpp
Experiments/Particle_v003_Sphere/: main.cpp
Experiments/Particle_v003_Sphere/Core/: App.cpp
Experiments/Particle_v003_Sphere/Core/Camera/: Camera.cpp  CameraManager.h
Experiments/Particle_v003_Sphere/OpenGL/: Renderer.cpp  UpdateProgram.h  VertexArray.h  VertexData.h
Experiments/Particle_v003_Sphere/Particle/: Particle.cpp
Experiments/Particle_v004: ImGui/src/Core/: App.cpp  App.h
Experiments/Particle_v004: ImGui/src/OpenGL/: Renderer.cpp
Experiments/Particle_v004: ImGui/src/Particle/: Particle.h
Experiments/Particle_v004: ImGui/src/Utility/: Log.h
Experiments/Particle_v004_ImGui/Resources/Shaders/: basic.update  point.fragment  update.vertex
Experiments/Particle_v004_ImGui/src/: main.cpp  nuklear_demo.cpp
Experiments/Particle_v004_ImGui/src/Core/: App.cpp  GlobalConfiguration.cpp  GlobalConfiguration.h
Experiments/Particle_v004_ImGui/src/OpenGL/: Renderer.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Experiments/Particle_v004_ImGui/src/Primitives/: Colours.h
Experiments/Particle_v004_ImGui/src/Utility/: Timer.h
Particle/: imgui.ini
Particle/Resources/: config.ini
Particle/Resources/Definitions/: Input-Camera.def
Particle/Resources/Shaders/: basic.fragment  basic.update  basic.vertex  force_update.vertex  mesh.fragment.glsl  particle_update.vertex  particle_update.vertex.glsl  point.fragment  point.fragment.glsl  point.vertex  point.vertex.glsl  render.fragment  render.vertex  test.fragment  test.vertex  update.vertex
Particle/src/: PCHeader.h  imgui_demo.cpp  main.cpp
Particle/src/Camera/: Camera.cpp  Camera.h
Particle/src/Core/: App.cpp  App.h  GlobalConfiguration.cpp  GlobalConfiguration.h
Particle/src/Core/Camera/: Camera.cpp  Camera.h  (+5 more)
Particle/src/GL/: GLRenderer.cpp  GLRenderer.h  GLSLProgram.cpp  GLSLProgram.h  GL_Helpers.hpp
Particle/src/Graphics/: GLSLProgram.h  Helpers.hpp  Program.h
Particle/src/Headers/: glad.c  glad.cpp
Particle/src/OpenGL/: GLLog.h  OpenGL.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Texture.cpp  UpdateProgram.cpp  VBOLayout.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexData.h
Particle/src/Particle/: Particle.cpp  Particle.h
Particle/src/ParticleSystem/: PTProgram.cpp  PTProgram.h  PTRenderer.cpp  PTRenderer.h  ParticleSystem.cpp  ParticleSystem.h
Particle/src/Primitives/: Quad.h  Vertex.h
Particle/src/Renderables/: Quad.hpp  Vertex.hpp
Particle/src/Resources/: nest.cpp
Particle/src/Simulation/: Container.cpp  Container.h  ForceGrid.cpp  ForceGrid.h  ForceGridData.h  Simulation.cpp  Simulation.h  Terrain.cpp  Terrain.h
Particle/src/Utility/: Error.hpp  Exception.h  Log.cpp  Log.h  Math.h  Profiler.h  Timer.cpp  Timer.h  Utils.h
Particle/src/Window/: Window.cpp  Window.h
ParticleTest/src/: main.cpp
Profiling/: profiler-output-aftermesh.csv  profiler-output-forces-on-gpu.xlsx  profiler-output-multi-thread-INCORRECTORDERING.xlsx  profiler-output-multi-thread-ORDERING-CORRECTED.xlsx  profiler-output-multi-thread-app-profiling-only.csv  profiler-output-multi-thread-gui.xlsx  profiler-output-single-thread.xlsx  ~$profiler-output-forces-on-gpu.xlsx
Profiling Runs/Mac/: forward-profiler-output-10000.csv  forward-profiler-output-100000.csv  forward-profiler-output-1000000.csv  forward-profiler-output-2600.csv  forward-profiler-output-50000.csv  forward-profiler-output-500000.csv  naive-profiler-output-10000.csv  naive-profiler-output-100000.csv  naive-profiler-output-1000000.csv  naive-profiler-output-2600.csv  naive-profiler-output-50000.csv  naive-profiler-output-500000.csv
Profiling Runs/Macbook/: forward-profiler-output-10000.csv  forward-profiler-output-100000.csv  forward-profiler-output-1000000.csv  forward-profiler-output-2600.csv  forward-profiler-output-50000.csv  forward-profiler-output-500000.csv  naive-profiler-output-10000.csv  naive-profiler-output-100000.csv  naive-profiler-output-1000000.csv  naive-profiler-output-2600.csv  naive-profiler-output-50000.csv  naive-profiler-output-500000.csv
Scripts/: Build-Run.sh  Build.sh  Clean.bat  Clean.sh  Commit.bat  Commit.sh  Generate.bat  Generate.sh  Test.sh
(+121 files in other folders)
