cmake_minimum_required(VERSION 3.14)
project(Particle)

set(CMAKE_CXX_STANDARD 17)

include_directories(Particle/src)
include_directories(Particle/src/Core)
include_directories(Particle/src/Core/Camera)
include_directories(Particle/src/Core/GUI)
include_directories(Particle/src/Core/Input)
include_directories(Particle/src/Core/Window)
include_directories(Particle/src/Headers)
include_directories(Particle/src/Headers/imgui)
include_directories(Particle/src/OpenGL)
include_directories(Particle/src/OpenGL/Buffers)
include_directories(Particle/src/OpenGL/Datastores)
include_directories(Particle/src/OpenGL/Primitives)
include_directories(Particle/src/OpenGL/Programs)
include_directories(Particle/src/OpenGL/Renderers)
include_directories(Particle/src/Particle)
include_directories(Particle/src/Particle/Emitter)
include_directories(Particle/src/Simulation)
include_directories(Particle/src/Utility)
include_directories(Particle/src/Utility/Math)
include_directories(Particle/src/Utility/Random)
include_directories(vendor/glad)
include_directories(vendor/glad/include)
include_directories(vendor/glad/include/glad)
include_directories(vendor/glad/include/KHR)
include_directories(vendor/glfw)
include_directories(vendor/glfw/include)
include_directories(vendor/glfw/include/GLFW)
include_directories(vendor/glm/glm)
include_directories(vendor/glm/glm/detail)
include_directories(vendor/glm/glm/ext)
include_directories(vendor/glm/glm/gtc)
include_directories(vendor/glm/glm/gtx)
include_directories(vendor/glm/glm/simd)
include_directories(vendor/spdlog/bench)
include_directories(vendor/spdlog/example)
include_directories(vendor/spdlog/include)
include_directories(vendor/spdlog/include/spdlog)
include_directories(vendor/spdlog/include/spdlog/details)
include_directories(vendor/spdlog/include/spdlog/fmt)
include_directories(vendor/spdlog/include/spdlog/fmt/bundled)
include_directories(vendor/spdlog/include/spdlog/sinks)
include_directories(vendor/spdlog/tests)

add_executable(Particle
        Particle/Resources/Definitions/Error.def
        Particle/Resources/Definitions/Input-Camera.def
        Particle/Resources/Shaders/Debug/debug.fragment
        Particle/Resources/Shaders/Debug/debug.vertex
        Particle/Resources/Shaders/particle_update.vertex.glsl
        Particle/Resources/Shaders/point.fragment
        Particle/Resources/Shaders/point.vertex
        Particle/src/Core/Camera/Camera.cpp
        Particle/src/Core/Camera/Camera.h
        Particle/src/Core/Camera/Camera2D.hpp
        Particle/src/Core/Camera/Camera3D.hpp
        Particle/src/Core/Camera/CameraManager.cpp
        Particle/src/Core/Camera/CameraManager.h
        Particle/src/Core/Camera/CameraStructures.h
        Particle/src/Core/GUI/GUILayer.cpp
        Particle/src/Core/GUI/GUILayer.h
        Particle/src/Core/Input/InputManager.cpp
        Particle/src/Core/Input/InputManager.h
        Particle/src/Core/Input/InputReceiver.h
        Particle/src/Core/Window/Window.cpp
        Particle/src/Core/Window/Window.h
        Particle/src/Core/App.cpp
        Particle/src/Core/App.h
        Particle/src/Core/GlobalConfiguration.cpp
        Particle/src/Core/GlobalConfiguration.h
        Particle/src/Headers/imgui/imconfig.h
        Particle/src/Headers/imgui/imgui.cpp
        Particle/src/Headers/imgui/imgui.h
        Particle/src/Headers/imgui/imgui_demo.cpp
        Particle/src/Headers/imgui/imgui_draw.cpp
        Particle/src/Headers/imgui/imgui_impl_glfw.cpp
        Particle/src/Headers/imgui/imgui_impl_glfw.h
        Particle/src/Headers/imgui/imgui_impl_opengl3.cpp
        Particle/src/Headers/imgui/imgui_impl_opengl3.h
        Particle/src/Headers/imgui/imgui_internal.h
        Particle/src/Headers/imgui/imgui_widgets.cpp
        Particle/src/Headers/imgui/imstb_rectpack.h
        Particle/src/Headers/imgui/imstb_textedit.h
        Particle/src/Headers/imgui/imstb_truetype.h
        Particle/src/Headers/Colors.hpp
        Particle/src/Headers/glad.cpp
        Particle/src/Headers/ImGUI.hpp
        Particle/src/Headers/OpenGL.hpp
        Particle/src/Headers/stb_image.h
        Particle/src/OpenGL/Buffers/VBOLayout.h
        Particle/src/OpenGL/Buffers/VertexArray.cpp
        Particle/src/OpenGL/Buffers/VertexArray.h
        Particle/src/OpenGL/Buffers/VertexBuffer.cpp
        Particle/src/OpenGL/Buffers/VertexBuffer.h
        Particle/src/OpenGL/Datastores/Datastore.cpp
        Particle/src/OpenGL/Datastores/Datastore.h
        Particle/src/OpenGL/Datastores/DebugDatastore.cpp
        Particle/src/OpenGL/Datastores/DebugDatastore.h
        Particle/src/OpenGL/Primitives/Cube.h
        Particle/src/OpenGL/Primitives/Quad.h
        Particle/src/OpenGL/Primitives/Vertex.h
        Particle/src/OpenGL/Programs/DebugProgram.cpp
        Particle/src/OpenGL/Programs/DebugProgram.h
        Particle/src/OpenGL/Programs/Program.cpp
        Particle/src/OpenGL/Programs/Program.h
        Particle/src/OpenGL/Programs/ProgramManager.cpp
        Particle/src/OpenGL/Programs/ProgramManager.h
        Particle/src/OpenGL/Programs/UpdateProgram.cpp
        Particle/src/OpenGL/Programs/UpdateProgram.h
        Particle/src/OpenGL/Renderers/DebugRenderer.cpp
        Particle/src/OpenGL/Renderers/DebugRenderer.h
        Particle/src/OpenGL/Renderers/Renderer.cpp
        Particle/src/OpenGL/Renderers/Renderer.h
        Particle/src/OpenGL/GLLog.h
        Particle/src/OpenGL/Texture.cpp
        Particle/src/OpenGL/Texture.h
        Particle/src/Particle/Emitter/Emitter.cpp
        Particle/src/Particle/Emitter/Emitter.h
        Particle/src/Particle/Emitter/EmitterManager.cpp
        Particle/src/Particle/Emitter/EmitterManager.h
        Particle/src/Particle/Particle.cpp
        Particle/src/Particle/Particle.h
        Particle/src/Simulation/ForceGrid.cpp
        Particle/src/Simulation/ForceGrid.h
        Particle/src/Simulation/ForceGridData.h
        Particle/src/Simulation/Simulation.cpp
        Particle/src/Simulation/Simulation.h
        Particle/src/Utility/Math/Mathf.cpp
        Particle/src/Utility/Math/Mathf.h
        Particle/src/Utility/Random/Perlin.cpp
        Particle/src/Utility/Random/Perlin.h
        Particle/src/Utility/Random/Random.cpp
        Particle/src/Utility/Random/Random.h
        Particle/src/Utility/Exception.h
        Particle/src/Utility/Log.cpp
        Particle/src/Utility/Log.h
        Particle/src/Utility/Profiler.h
        Particle/src/Utility/Timer.cpp
        Particle/src/Utility/Timer.h
        Particle/src/Utility/Utils.h
        Particle/src/main.cpp
        Particle/src/PCHeader.cpp
        Particle/src/PCHeader.h
        Particle/imgui.ini
        vendor/glad/include/glad/glad.h
        vendor/glad/include/KHR/khrplatform.h
        vendor/glfw/include/GLFW/glfw3.h
        vendor/glfw/include/GLFW/glfw3native.h
        vendor/glm/glm/detail/_features.hpp
        vendor/glm/glm/detail/_fixes.hpp
        vendor/glm/glm/detail/_noise.hpp
        vendor/glm/glm/detail/_swizzle.hpp
        vendor/glm/glm/detail/_swizzle_func.hpp
        vendor/glm/glm/detail/_vectorize.hpp
        vendor/glm/glm/detail/compute_common.hpp
        vendor/glm/glm/detail/compute_vector_relational.hpp
        vendor/glm/glm/detail/func_common.inl
        vendor/glm/glm/detail/func_common_simd.inl
        vendor/glm/glm/detail/func_exponential.inl
        vendor/glm/glm/detail/func_exponential_simd.inl
        vendor/glm/glm/detail/func_geometric.inl
        vendor/glm/glm/detail/func_geometric_simd.inl
        vendor/glm/glm/detail/func_integer.inl
        vendor/glm/glm/detail/func_integer_simd.inl
        vendor/glm/glm/detail/func_matrix.inl
        vendor/glm/glm/detail/func_matrix_simd.inl
        vendor/glm/glm/detail/func_packing.inl
        vendor/glm/glm/detail/func_packing_simd.inl
        vendor/glm/glm/detail/func_trigonometric.inl
        vendor/glm/glm/detail/func_trigonometric_simd.inl
        vendor/glm/glm/detail/func_vector_relational.inl
        vendor/glm/glm/detail/func_vector_relational_simd.inl
        vendor/glm/glm/detail/glm.cpp
        vendor/glm/glm/detail/qualifier.hpp
        vendor/glm/glm/detail/setup.hpp
        vendor/glm/glm/detail/type_float.hpp
        vendor/glm/glm/detail/type_half.hpp
        vendor/glm/glm/detail/type_half.inl
        vendor/glm/glm/detail/type_mat2x2.hpp
        vendor/glm/glm/detail/type_mat2x2.inl
        vendor/glm/glm/detail/type_mat2x3.hpp
        vendor/glm/glm/detail/type_mat2x3.inl
        vendor/glm/glm/detail/type_mat2x4.hpp
        vendor/glm/glm/detail/type_mat2x4.inl
        vendor/glm/glm/detail/type_mat3x2.hpp
        vendor/glm/glm/detail/type_mat3x2.inl
        vendor/glm/glm/detail/type_mat3x3.hpp
        vendor/glm/glm/detail/type_mat3x3.inl
        vendor/glm/glm/detail/type_mat3x4.hpp
        vendor/glm/glm/detail/type_mat3x4.inl
        vendor/glm/glm/detail/type_mat4x2.hpp
        vendor/glm/glm/detail/type_mat4x2.inl
        vendor/glm/glm/detail/type_mat4x3.hpp
        vendor/glm/glm/detail/type_mat4x3.inl
        vendor/glm/glm/detail/type_mat4x4.hpp
        vendor/glm/glm/detail/type_mat4x4.inl
        vendor/glm/glm/detail/type_mat4x4_simd.inl
        vendor/glm/glm/detail/type_quat.hpp
        vendor/glm/glm/detail/type_quat.inl
        vendor/glm/glm/detail/type_quat_simd.inl
        vendor/glm/glm/detail/type_vec1.hpp
        vendor/glm/glm/detail/type_vec1.inl
        vendor/glm/glm/detail/type_vec2.hpp
        vendor/glm/glm/detail/type_vec2.inl
        vendor/glm/glm/detail/type_vec3.hpp
        vendor/glm/glm/detail/type_vec3.inl
        vendor/glm/glm/detail/type_vec4.hpp
        vendor/glm/glm/detail/type_vec4.inl
        vendor/glm/glm/detail/type_vec4_simd.inl
        vendor/glm/glm/ext/matrix_clip_space.hpp
        vendor/glm/glm/ext/matrix_clip_space.inl
        vendor/glm/glm/ext/matrix_common.hpp
        vendor/glm/glm/ext/matrix_common.inl
        vendor/glm/glm/ext/matrix_double2x2.hpp
        vendor/glm/glm/ext/matrix_double2x2_precision.hpp
        vendor/glm/glm/ext/matrix_double2x3.hpp
        vendor/glm/glm/ext/matrix_double2x3_precision.hpp
        vendor/glm/glm/ext/matrix_double2x4.hpp
        vendor/glm/glm/ext/matrix_double2x4_precision.hpp
        vendor/glm/glm/ext/matrix_double3x2.hpp
        vendor/glm/glm/ext/matrix_double3x2_precision.hpp
        vendor/glm/glm/ext/matrix_double3x3.hpp
        vendor/glm/glm/ext/matrix_double3x3_precision.hpp
        vendor/glm/glm/ext/matrix_double3x4.hpp
        vendor/glm/glm/ext/matrix_double3x4_precision.hpp
        vendor/glm/glm/ext/matrix_double4x2.hpp
        vendor/glm/glm/ext/matrix_double4x2_precision.hpp
        vendor/glm/glm/ext/matrix_double4x3.hpp
        vendor/glm/glm/ext/matrix_double4x3_precision.hpp
        vendor/glm/glm/ext/matrix_double4x4.hpp
        vendor/glm/glm/ext/matrix_double4x4_precision.hpp
        vendor/glm/glm/ext/matrix_float2x2.hpp
        vendor/glm/glm/ext/matrix_float2x2_precision.hpp
        vendor/glm/glm/ext/matrix_float2x3.hpp
        vendor/glm/glm/ext/matrix_float2x3_precision.hpp
        vendor/glm/glm/ext/matrix_float2x4.hpp
        vendor/glm/glm/ext/matrix_float2x4_precision.hpp
        vendor/glm/glm/ext/matrix_float3x2.hpp
        vendor/glm/glm/ext/matrix_float3x2_precision.hpp
        vendor/glm/glm/ext/matrix_float3x3.hpp
        vendor/glm/glm/ext/matrix_float3x3_precision.hpp
        vendor/glm/glm/ext/matrix_float3x4.hpp
        vendor/glm/glm/ext/matrix_float3x4_precision.hpp
        vendor/glm/glm/ext/matrix_float4x2.hpp
        vendor/glm/glm/ext/matrix_float4x2_precision.hpp
        vendor/glm/glm/ext/matrix_float4x3.hpp
        vendor/glm/glm/ext/matrix_float4x3_precision.hpp
        vendor/glm/glm/ext/matrix_float4x4.hpp
        vendor/glm/glm/ext/matrix_float4x4_precision.hpp
        vendor/glm/glm/ext/matrix_projection.hpp
        vendor/glm/glm/ext/matrix_projection.inl
        vendor/glm/glm/ext/matrix_relational.hpp
        vendor/glm/glm/ext/matrix_relational.inl
        vendor/glm/glm/ext/matrix_transform.hpp
        vendor/glm/glm/ext/matrix_transform.inl
        vendor/glm/glm/ext/quaternion_common.hpp
        vendor/glm/glm/ext/quaternion_common.inl
        vendor/glm/glm/ext/quaternion_common_simd.inl
        vendor/glm/glm/ext/quaternion_double.hpp
        vendor/glm/glm/ext/quaternion_double_precision.hpp
        vendor/glm/glm/ext/quaternion_exponential.hpp
        vendor/glm/glm/ext/quaternion_exponential.inl
        vendor/glm/glm/ext/quaternion_float.hpp
        vendor/glm/glm/ext/quaternion_float_precision.hpp
        vendor/glm/glm/ext/quaternion_geometric.hpp
        vendor/glm/glm/ext/quaternion_geometric.inl
        vendor/glm/glm/ext/quaternion_relational.hpp
        vendor/glm/glm/ext/quaternion_relational.inl
        vendor/glm/glm/ext/quaternion_transform.hpp
        vendor/glm/glm/ext/quaternion_transform.inl
        vendor/glm/glm/ext/quaternion_trigonometric.hpp
        vendor/glm/glm/ext/quaternion_trigonometric.inl
        vendor/glm/glm/ext/scalar_common.hpp
        vendor/glm/glm/ext/scalar_common.inl
        vendor/glm/glm/ext/scalar_constants.hpp
        vendor/glm/glm/ext/scalar_constants.inl
        vendor/glm/glm/ext/scalar_int_sized.hpp
        vendor/glm/glm/ext/scalar_relational.hpp
        vendor/glm/glm/ext/scalar_relational.inl
        vendor/glm/glm/ext/scalar_uint_sized.hpp
        vendor/glm/glm/ext/scalar_ulp.hpp
        vendor/glm/glm/ext/scalar_ulp.inl
        vendor/glm/glm/ext/vector_bool1.hpp
        vendor/glm/glm/ext/vector_bool1_precision.hpp
        vendor/glm/glm/ext/vector_bool2.hpp
        vendor/glm/glm/ext/vector_bool2_precision.hpp
        vendor/glm/glm/ext/vector_bool3.hpp
        vendor/glm/glm/ext/vector_bool3_precision.hpp
        vendor/glm/glm/ext/vector_bool4.hpp
        vendor/glm/glm/ext/vector_bool4_precision.hpp
        vendor/glm/glm/ext/vector_common.hpp
        vendor/glm/glm/ext/vector_common.inl
        vendor/glm/glm/ext/vector_double1.hpp
        vendor/glm/glm/ext/vector_double1_precision.hpp
        vendor/glm/glm/ext/vector_double2.hpp
        vendor/glm/glm/ext/vector_double2_precision.hpp
        vendor/glm/glm/ext/vector_double3.hpp
        vendor/glm/glm/ext/vector_double3_precision.hpp
        vendor/glm/glm/ext/vector_double4.hpp
        vendor/glm/glm/ext/vector_double4_precision.hpp
        vendor/glm/glm/ext/vector_float1.hpp
        vendor/glm/glm/ext/vector_float1_precision.hpp
        vendor/glm/glm/ext/vector_float2.hpp
        vendor/glm/glm/ext/vector_float2_precision.hpp
        vendor/glm/glm/ext/vector_float3.hpp
        vendor/glm/glm/ext/vector_float3_precision.hpp
        vendor/glm/glm/ext/vector_float4.hpp
        vendor/glm/glm/ext/vector_float4_precision.hpp
        vendor/glm/glm/ext/vector_int1.hpp
        vendor/glm/glm/ext/vector_int1_precision.hpp
        vendor/glm/glm/ext/vector_int2.hpp
        vendor/glm/glm/ext/vector_int2_precision.hpp
        vendor/glm/glm/ext/vector_int3.hpp
        vendor/glm/glm/ext/vector_int3_precision.hpp
        vendor/glm/glm/ext/vector_int4.hpp
        vendor/glm/glm/ext/vector_int4_precision.hpp
        vendor/glm/glm/ext/vector_relational.hpp
        vendor/glm/glm/ext/vector_relational.inl
        vendor/glm/glm/ext/vector_uint1.hpp
        vendor/glm/glm/ext/vector_uint1_precision.hpp
        vendor/glm/glm/ext/vector_uint2.hpp
        vendor/glm/glm/ext/vector_uint2_precision.hpp
        vendor/glm/glm/ext/vector_uint3.hpp
        vendor/glm/glm/ext/vector_uint3_precision.hpp
        vendor/glm/glm/ext/vector_uint4.hpp
        vendor/glm/glm/ext/vector_uint4_precision.hpp
        vendor/glm/glm/ext/vector_ulp.hpp
        vendor/glm/glm/ext/vector_ulp.inl
        vendor/glm/glm/gtc/bitfield.hpp
        vendor/glm/glm/gtc/bitfield.inl
        vendor/glm/glm/gtc/color_space.hpp
        vendor/glm/glm/gtc/color_space.inl
        vendor/glm/glm/gtc/constants.hpp
        vendor/glm/glm/gtc/constants.inl
        vendor/glm/glm/gtc/epsilon.hpp
        vendor/glm/glm/gtc/epsilon.inl
        vendor/glm/glm/gtc/integer.hpp
        vendor/glm/glm/gtc/integer.inl
        vendor/glm/glm/gtc/matrix_access.hpp
        vendor/glm/glm/gtc/matrix_access.inl
        vendor/glm/glm/gtc/matrix_integer.hpp
        vendor/glm/glm/gtc/matrix_inverse.hpp
        vendor/glm/glm/gtc/matrix_inverse.inl
        vendor/glm/glm/gtc/matrix_transform.hpp
        vendor/glm/glm/gtc/matrix_transform.inl
        vendor/glm/glm/gtc/noise.hpp
        vendor/glm/glm/gtc/noise.inl
        vendor/glm/glm/gtc/packing.hpp
        vendor/glm/glm/gtc/packing.inl
        vendor/glm/glm/gtc/quaternion.hpp
        vendor/glm/glm/gtc/quaternion.inl
        vendor/glm/glm/gtc/quaternion_simd.inl
        vendor/glm/glm/gtc/random.hpp
        vendor/glm/glm/gtc/random.inl
        vendor/glm/glm/gtc/reciprocal.hpp
        vendor/glm/glm/gtc/reciprocal.inl
        vendor/glm/glm/gtc/round.hpp
        vendor/glm/glm/gtc/round.inl
        vendor/glm/glm/gtc/type_aligned.hpp
        vendor/glm/glm/gtc/type_precision.hpp
        vendor/glm/glm/gtc/type_precision.inl
        vendor/glm/glm/gtc/type_ptr.hpp
        vendor/glm/glm/gtc/type_ptr.inl
        vendor/glm/glm/gtc/ulp.hpp
        vendor/glm/glm/gtc/ulp.inl
        vendor/glm/glm/gtc/vec1.hpp
        vendor/glm/glm/gtx/associated_min_max.hpp
        vendor/glm/glm/gtx/associated_min_max.inl
        vendor/glm/glm/gtx/bit.hpp
        vendor/glm/glm/gtx/bit.inl
        vendor/glm/glm/gtx/closest_point.hpp
        vendor/glm/glm/gtx/closest_point.inl
        vendor/glm/glm/gtx/color_encoding.hpp
        vendor/glm/glm/gtx/color_encoding.inl
        vendor/glm/glm/gtx/color_space.hpp
        vendor/glm/glm/gtx/color_space.inl
        vendor/glm/glm/gtx/color_space_YCoCg.hpp
        vendor/glm/glm/gtx/color_space_YCoCg.inl
        vendor/glm/glm/gtx/common.hpp
        vendor/glm/glm/gtx/common.inl
        vendor/glm/glm/gtx/compatibility.hpp
        vendor/glm/glm/gtx/compatibility.inl
        vendor/glm/glm/gtx/component_wise.hpp
        vendor/glm/glm/gtx/component_wise.inl
        vendor/glm/glm/gtx/dual_quaternion.hpp
        vendor/glm/glm/gtx/dual_quaternion.inl
        vendor/glm/glm/gtx/easing.hpp
        vendor/glm/glm/gtx/easing.inl
        vendor/glm/glm/gtx/euler_angles.hpp
        vendor/glm/glm/gtx/euler_angles.inl
        vendor/glm/glm/gtx/extend.hpp
        vendor/glm/glm/gtx/extend.inl
        vendor/glm/glm/gtx/extended_min_max.hpp
        vendor/glm/glm/gtx/extended_min_max.inl
        vendor/glm/glm/gtx/exterior_product.hpp
        vendor/glm/glm/gtx/exterior_product.inl
        vendor/glm/glm/gtx/fast_exponential.hpp
        vendor/glm/glm/gtx/fast_exponential.inl
        vendor/glm/glm/gtx/fast_square_root.hpp
        vendor/glm/glm/gtx/fast_square_root.inl
        vendor/glm/glm/gtx/fast_trigonometry.hpp
        vendor/glm/glm/gtx/fast_trigonometry.inl
        vendor/glm/glm/gtx/float_notmalize.inl
        vendor/glm/glm/gtx/functions.hpp
        vendor/glm/glm/gtx/functions.inl
        vendor/glm/glm/gtx/gradient_paint.hpp
        vendor/glm/glm/gtx/gradient_paint.inl
        vendor/glm/glm/gtx/handed_coordinate_space.hpp
        vendor/glm/glm/gtx/handed_coordinate_space.inl
        vendor/glm/glm/gtx/hash.hpp
        vendor/glm/glm/gtx/hash.inl
        vendor/glm/glm/gtx/integer.hpp
        vendor/glm/glm/gtx/integer.inl
        vendor/glm/glm/gtx/intersect.hpp
        vendor/glm/glm/gtx/intersect.inl
        vendor/glm/glm/gtx/io.hpp
        vendor/glm/glm/gtx/io.inl
        vendor/glm/glm/gtx/log_base.hpp
        vendor/glm/glm/gtx/log_base.inl
        vendor/glm/glm/gtx/matrix_cross_product.hpp
        vendor/glm/glm/gtx/matrix_cross_product.inl
        vendor/glm/glm/gtx/matrix_decompose.hpp
        vendor/glm/glm/gtx/matrix_decompose.inl
        vendor/glm/glm/gtx/matrix_factorisation.hpp
        vendor/glm/glm/gtx/matrix_factorisation.inl
        vendor/glm/glm/gtx/matrix_interpolation.hpp
        vendor/glm/glm/gtx/matrix_interpolation.inl
        vendor/glm/glm/gtx/matrix_major_storage.hpp
        vendor/glm/glm/gtx/matrix_major_storage.inl
        vendor/glm/glm/gtx/matrix_operation.hpp
        vendor/glm/glm/gtx/matrix_operation.inl
        vendor/glm/glm/gtx/matrix_query.hpp
        vendor/glm/glm/gtx/matrix_query.inl
        vendor/glm/glm/gtx/matrix_transform_2d.hpp
        vendor/glm/glm/gtx/matrix_transform_2d.inl
        vendor/glm/glm/gtx/mixed_product.hpp
        vendor/glm/glm/gtx/mixed_product.inl
        vendor/glm/glm/gtx/norm.hpp
        vendor/glm/glm/gtx/norm.inl
        vendor/glm/glm/gtx/normal.hpp
        vendor/glm/glm/gtx/normal.inl
        vendor/glm/glm/gtx/normalize_dot.hpp
        vendor/glm/glm/gtx/normalize_dot.inl
        vendor/glm/glm/gtx/number_precision.hpp
        vendor/glm/glm/gtx/number_precision.inl
        vendor/glm/glm/gtx/optimum_pow.hpp
        vendor/glm/glm/gtx/optimum_pow.inl
        vendor/glm/glm/gtx/orthonormalize.hpp
        vendor/glm/glm/gtx/orthonormalize.inl
        vendor/glm/glm/gtx/perpendicular.hpp
        vendor/glm/glm/gtx/perpendicular.inl
        vendor/glm/glm/gtx/polar_coordinates.hpp
        vendor/glm/glm/gtx/polar_coordinates.inl
        vendor/glm/glm/gtx/projection.hpp
        vendor/glm/glm/gtx/projection.inl
        vendor/glm/glm/gtx/quaternion.hpp
        vendor/glm/glm/gtx/quaternion.inl
        vendor/glm/glm/gtx/range.hpp
        vendor/glm/glm/gtx/raw_data.hpp
        vendor/glm/glm/gtx/raw_data.inl
        vendor/glm/glm/gtx/rotate_normalized_axis.hpp
        vendor/glm/glm/gtx/rotate_normalized_axis.inl
        vendor/glm/glm/gtx/rotate_vector.hpp
        vendor/glm/glm/gtx/rotate_vector.inl
        vendor/glm/glm/gtx/scalar_multiplication.hpp
        vendor/glm/glm/gtx/scalar_relational.hpp
        vendor/glm/glm/gtx/scalar_relational.inl
        vendor/glm/glm/gtx/spline.hpp
        vendor/glm/glm/gtx/spline.inl
        vendor/glm/glm/gtx/std_based_type.hpp
        vendor/glm/glm/gtx/std_based_type.inl
        vendor/glm/glm/gtx/string_cast.hpp
        vendor/glm/glm/gtx/string_cast.inl
        vendor/glm/glm/gtx/texture.hpp
        vendor/glm/glm/gtx/texture.inl
        vendor/glm/glm/gtx/transform.hpp
        vendor/glm/glm/gtx/transform.inl
        vendor/glm/glm/gtx/transform2.hpp
        vendor/glm/glm/gtx/transform2.inl
        vendor/glm/glm/gtx/type_aligned.hpp
        vendor/glm/glm/gtx/type_aligned.inl
        vendor/glm/glm/gtx/type_trait.hpp
        vendor/glm/glm/gtx/type_trait.inl
        vendor/glm/glm/gtx/vec_swizzle.hpp
        vendor/glm/glm/gtx/vector_angle.hpp
        vendor/glm/glm/gtx/vector_angle.inl
        vendor/glm/glm/gtx/vector_query.hpp
        vendor/glm/glm/gtx/vector_query.inl
        vendor/glm/glm/gtx/wrap.hpp
        vendor/glm/glm/gtx/wrap.inl
        vendor/glm/glm/simd/common.h
        vendor/glm/glm/simd/exponential.h
        vendor/glm/glm/simd/geometric.h
        vendor/glm/glm/simd/integer.h
        vendor/glm/glm/simd/matrix.h
        vendor/glm/glm/simd/packing.h
        vendor/glm/glm/simd/platform.h
        vendor/glm/glm/simd/trigonometric.h
        vendor/glm/glm/simd/vector_relational.h
        vendor/glm/glm/common.hpp
        vendor/glm/glm/exponential.hpp
        vendor/glm/glm/ext.hpp
        vendor/glm/glm/fwd.hpp
        vendor/glm/glm/geometric.hpp
        vendor/glm/glm/glm.hpp
        vendor/glm/glm/integer.hpp
        vendor/glm/glm/mat2x2.hpp
        vendor/glm/glm/mat2x3.hpp
        vendor/glm/glm/mat2x4.hpp
        vendor/glm/glm/mat3x2.hpp
        vendor/glm/glm/mat3x3.hpp
        vendor/glm/glm/mat3x4.hpp
        vendor/glm/glm/mat4x2.hpp
        vendor/glm/glm/mat4x3.hpp
        vendor/glm/glm/mat4x4.hpp
        vendor/glm/glm/matrix.hpp
        vendor/glm/glm/packing.hpp
        vendor/glm/glm/trigonometric.hpp
        vendor/glm/glm/vec2.hpp
        vendor/glm/glm/vec3.hpp
        vendor/glm/glm/vec4.hpp
        vendor/glm/glm/vector_relational.hpp
        vendor/spdlog/bench/async_bench.cpp
        vendor/spdlog/bench/bench.cpp
        vendor/spdlog/bench/formatter-bench.cpp
        vendor/spdlog/bench/latency.cpp
        vendor/spdlog/bench/utils.h
        vendor/spdlog/example/jni/example.cpp
        vendor/spdlog/example/example.cpp
        vendor/spdlog/example/multisink.cpp
        vendor/spdlog/example/utils.h
        vendor/spdlog/include/spdlog/details/async_logger_impl.h
        vendor/spdlog/include/spdlog/details/circular_q.h
        vendor/spdlog/include/spdlog/details/console_globals.h
        vendor/spdlog/include/spdlog/details/file_helper.h
        vendor/spdlog/include/spdlog/details/fmt_helper.h
        vendor/spdlog/include/spdlog/details/log_msg.h
        vendor/spdlog/include/spdlog/details/logger_impl.h
        vendor/spdlog/include/spdlog/details/mpmc_blocking_q.h
        vendor/spdlog/include/spdlog/details/null_mutex.h
        vendor/spdlog/include/spdlog/details/os.h
        vendor/spdlog/include/spdlog/details/pattern_formatter.h
        vendor/spdlog/include/spdlog/details/periodic_worker.h
        vendor/spdlog/include/spdlog/details/registry.h
        vendor/spdlog/include/spdlog/details/thread_pool.h
        vendor/spdlog/include/spdlog/fmt/bundled/chrono.h
        vendor/spdlog/include/spdlog/fmt/bundled/color.h
        vendor/spdlog/include/spdlog/fmt/bundled/core.h
        vendor/spdlog/include/spdlog/fmt/bundled/format-inl.h
        vendor/spdlog/include/spdlog/fmt/bundled/format.h
        vendor/spdlog/include/spdlog/fmt/bundled/locale.h
        vendor/spdlog/include/spdlog/fmt/bundled/ostream.h
        vendor/spdlog/include/spdlog/fmt/bundled/posix.h
        vendor/spdlog/include/spdlog/fmt/bundled/printf.h
        vendor/spdlog/include/spdlog/fmt/bundled/ranges.h
        vendor/spdlog/include/spdlog/fmt/bundled/time.h
        vendor/spdlog/include/spdlog/fmt/bin_to_hex.h
        vendor/spdlog/include/spdlog/fmt/fmt.h
        vendor/spdlog/include/spdlog/fmt/ostr.h
        vendor/spdlog/include/spdlog/sinks/android_sink.h
        vendor/spdlog/include/spdlog/sinks/ansicolor_sink.h
        vendor/spdlog/include/spdlog/sinks/base_sink.h
        vendor/spdlog/include/spdlog/sinks/basic_file_sink.h
        vendor/spdlog/include/spdlog/sinks/daily_file_sink.h
        vendor/spdlog/include/spdlog/sinks/dist_sink.h
        vendor/spdlog/include/spdlog/sinks/msvc_sink.h
        vendor/spdlog/include/spdlog/sinks/null_sink.h
        vendor/spdlog/include/spdlog/sinks/ostream_sink.h
        vendor/spdlog/include/spdlog/sinks/rotating_file_sink.h
        vendor/spdlog/include/spdlog/sinks/sink.h
        vendor/spdlog/include/spdlog/sinks/stdout_color_sinks.h
        vendor/spdlog/include/spdlog/sinks/stdout_sinks.h
        vendor/spdlog/include/spdlog/sinks/syslog_sink.h
        vendor/spdlog/include/spdlog/sinks/systemd_sink.h
        vendor/spdlog/include/spdlog/sinks/wincolor_sink.h
        vendor/spdlog/include/spdlog/async.h
        vendor/spdlog/include/spdlog/async_logger.h
        vendor/spdlog/include/spdlog/common.h
        vendor/spdlog/include/spdlog/formatter.h
        vendor/spdlog/include/spdlog/logger.h
        vendor/spdlog/include/spdlog/spdlog.h
        vendor/spdlog/include/spdlog/tweakme.h
        vendor/spdlog/include/spdlog/version.h
        vendor/spdlog/tests/catch.hpp
        vendor/spdlog/tests/includes.h
        vendor/spdlog/tests/main.cpp
        vendor/spdlog/tests/test_async.cpp
        vendor/spdlog/tests/test_errors.cpp
        vendor/spdlog/tests/test_file_helper.cpp
        vendor/spdlog/tests/test_file_logging.cpp
        vendor/spdlog/tests/test_fmt_helper.cpp
        vendor/spdlog/tests/test_macros.cpp
        vendor/spdlog/tests/test_misc.cpp
        vendor/spdlog/tests/test_mpmc_q.cpp
        vendor/spdlog/tests/test_pattern_formatter.cpp
        vendor/spdlog/tests/test_registry.cpp
        vendor/spdlog/tests/test_sink.h
        vendor/spdlog/tests/test_systemd.cpp
        vendor/spdlog/tests/utils.cpp
        vendor/spdlog/tests/utils.h Particle/src/OpenGL/Buffers/TextureBuffer.cpp Particle/src/OpenGL/Buffers/TextureBuffer.h)

target_link_libraries(Particle "-framework Cocoa")
target_link_libraries(Particle "-framework OpenGL")
target_link_libraries(Particle "-framework IOKit")
target_link_libraries(Particle "-framework CoreVideo")
target_link_libraries(Particle "-isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk")