cmake_minimum_required(VERSION 3.14)
project(Particle)

set(CMAKE_CXX_STANDARD 14)

include_directories(Particle/src)
include_directories(Particle/src/Core)
include_directories(Particle/src/Core/Camera)
include_directories(Particle/src/Core/GUI)
include_directories(Particle/src/Core/Input)
include_directories(Particle/src/Core/Window)
include_directories(Particle/src/Headers)
include_directories(Particle/src/Headers/imgui)
include_directories(Particle/src/OpenGL)
include_directories(Particle/src/OpenGL/Buffers)
include_directories(Particle/src/OpenGL/Datastores)
include_directories(Particle/src/OpenGL/Primitives)
include_directories(Particle/src/OpenGL/Programs)
include_directories(Particle/src/OpenGL/Renderers)
include_directories(Particle/src/Particle)
include_directories(Particle/src/Particle/Emitter)
include_directories(Particle/src/Simulation)
include_directories(Particle/src/Utility)
include_directories(Particle/src/Utility/Math)
include_directories(Particle/src/Utility/Random)

add_executable(Particle
        Particle/Resources/Definitions/Error.def
        Particle/Resources/Definitions/Input-Camera.def
        Particle/Resources/Shaders/Debug/debug.fragment.glsl
        Particle/Resources/Shaders/Debug/debug.vertex.glsl
        Particle/Resources/Shaders/Mesh/mesh.fragment.glsl
        Particle/Resources/Shaders/Mesh/mesh.vertex.glsl
        Particle/src/Core/Camera/Camera.cpp
        Particle/src/Core/Camera/Camera.h
        Particle/src/Core/Camera/CameraManager.cpp
        Particle/src/Core/Camera/CameraManager.h
        Particle/src/Core/GUI/GUILayer.cpp
        Particle/src/Core/GUI/GUILayer.h
        Particle/src/Core/Input/InputManager.cpp
        Particle/src/Core/Input/InputManager.h
        Particle/src/Core/Window/Window.cpp
        Particle/src/Core/Window/Window.h
        Particle/src/Core/App.cpp
        Particle/src/Core/App.h
        Particle/src/Headers/imgui/imconfig.h
        Particle/src/Headers/imgui/imgui.cpp
        Particle/src/Headers/imgui/imgui.h
        Particle/src/Headers/imgui/imgui_demo.cpp
        Particle/src/Headers/imgui/imgui_draw.cpp
        Particle/src/Headers/imgui/imgui_impl_glfw.cpp
        Particle/src/Headers/imgui/imgui_impl_glfw.h
        Particle/src/Headers/imgui/imgui_impl_opengl3.cpp
        Particle/src/Headers/imgui/imgui_impl_opengl3.h
        Particle/src/Headers/imgui/imgui_internal.h
        Particle/src/Headers/imgui/imgui_widgets.cpp
        Particle/src/Headers/imgui/imstb_rectpack.h
        Particle/src/Headers/imgui/imstb_textedit.h
        Particle/src/Headers/imgui/imstb_truetype.h
        Particle/src/Headers/Colors.hpp
        Particle/src/Headers/glad.cpp
        Particle/src/Headers/ImGUI.hpp
        Particle/src/Headers/OpenGL.hpp
        Particle/src/Headers/stb_image.h
        Particle/src/OpenGL/Buffers/TextureBuffer.cpp
        Particle/src/OpenGL/Buffers/TextureBuffer.h
        Particle/src/OpenGL/Buffers/VBOLayout.h
        Particle/src/OpenGL/Buffers/VertexArray.cpp
        Particle/src/OpenGL/Buffers/VertexArray.h
        Particle/src/OpenGL/Buffers/VertexBuffer.h
        Particle/src/OpenGL/Datastores/DebugData.cpp
        Particle/src/OpenGL/Datastores/DebugData.h
        Particle/src/OpenGL/Primitives/Cube.h
        Particle/src/OpenGL/Primitives/Quad.h
        Particle/src/OpenGL/Primitives/Vertex.h
        Particle/src/OpenGL/Programs/DebugProgram.cpp
        Particle/src/OpenGL/Programs/DebugProgram.h
        Particle/src/OpenGL/Programs/Program.cpp
        Particle/src/OpenGL/Programs/Program.h
        Particle/src/OpenGL/Programs/ProgramManager.cpp
        Particle/src/OpenGL/Programs/ProgramManager.h
        Particle/src/OpenGL/Renderers/DebugRenderer.cpp
        Particle/src/OpenGL/Renderers/DebugRenderer.h
        Particle/src/OpenGL/Renderers/MeshRenderer.cpp
        Particle/src/OpenGL/Renderers/MeshRenderer.h
        Particle/src/Particle/Emitter/Emitter.cpp
        Particle/src/Particle/Emitter/Emitter.h
        Particle/src/Particle/Emitter/EmitterManager.cpp
        Particle/src/Particle/Emitter/EmitterManager.h
        Particle/src/Utility/Math/Mathf.cpp
        Particle/src/Utility/Math/Mathf.h
        Particle/src/Utility/Random/Perlin.cpp
        Particle/src/Utility/Random/Perlin.h
        Particle/src/Utility/Random/Random.cpp
        Particle/src/Utility/Random/Random.h
        Particle/src/Utility/Profiler.h
        Particle/src/main.cpp
        Particle/src/PCHeader.cpp
        Particle/src/PCHeader.h Particle/src/Core/Window/Camera.cpp Particle/src/Core/Window/Camera.h Particle/src/Simulation/Container.cpp Particle/src/Simulation/Container.h Particle/src/OpenGL/Primitives/Plane.cpp Particle/src/OpenGL/Primitives/Plane.h "Particle/src/OpenGL/Base Objects/Object.h" Particle/src/OpenGL/Renderables/Renderable.h Particle/src/Simulation/Terrain.cpp Particle/src/Simulation/Terrain.h)
